# controller.py
@@ -1,6 +1,8 @@
 import sys
 from flask import abort
 import pymysql as mysql
+from datetime import datetime
+import statistics
 from config import OPENAPI_AUTOGEN_DIR, DB_HOST, DB_USER, DB_PASSWD, DB_NAME
 
 sys.path.append(OPENAPI_AUTOGEN_DIR)
@@ -12,105 +14,158 @@ def db_cursor():
                          passwd=DB_PASSWD,
                          db=DB_NAME).cursor()
 
-def get_hello():
-    return "helloworld"
+def find_min(arr):
+    min = arr[0]
+    for i in range(0, len(arr)):       
+        if(arr[i] < min):    
+            min = arr[i];   
+    return min 
+    
+def find_max(arr):
+    max = arr[0]
+    for i in range(0, len(arr)):       
+        if(arr[i] > max):    
+            max = arr[i];   
+    return max 
 
-# def get_basins():
-#     with db_cursor() as cs:
-#         cs.execute("""
-#             SELECT basin_id, ename, area
-#             FROM basin
-#         """)
-#         result = [models.Basin(*row) for row in cs.fetchall()]
-#         return result
+def find_stat(arr):
+    min = find_min(arr)
+    max = find_max(arr)
+    avg = sum(arr)/len(arr)
+    range = max - min
+    var = statistics.pvariance(arr)
+    sd = statistics.pstdev(arr)
+    return min, max, avg, range, var, sd
 
-# def get_basin_details(basin_id):
-#     with db_cursor() as cs:
-#         cs.execute("""
-#             SELECT basin_id, ename, area
-#             FROM basin
-#             WHERE basin_id=%s
-#             """, [basin_id])
-#         result = cs.fetchone()
-#     if result:
-#         basin_id, ename, area = result
-#         return models.Basin(*result)
-#     else:
-#         abort(404)
+def get_air(country):
+    with db_cursor() as cs:
+        cs.execute("""
+            SELECT c.country, c.carbon_avg, o.ozone_avg, m.methane_avg
+            FROM carbontest AS c
+            INNER JOIN ozonetest AS o 
+            ON c.start >= o.start and c.start <= o.end
+            INNER JOIN mettest AS m
+            ON o.start >= m.start and o.start <= m.end
+            WHERE c.country = %s       
+            """, [country])
+        result = cs.fetchone()
+    if result:
+        country, co, me, oz = result
+        return models.Quality(*result)
+    else:
+        abort(404)
+        
+def get_air_statistic_carbon(country):
+    curr_month = datetime.now().month
+    curr_year = datetime.now().year
+    with db_cursor as cs:
+        cs.execute("""
+            SELECT *
+            FROM carbontest c 
+            WHERE MONTH(c.end) = %s 
+            AND YEAR(c.end) = %s 
+            AND c.country = %s
+            """, [curr_month, curr_year, country])
+        result = cs.fetchall()
+        daily = []
+        for element in result:
+            daily.append(element[2])
+                    
+        result = [models.Statistic(country, find_stat(daily))]
+        return result
+    
+def get_air_statistic_methane(country):
+    curr_month = datetime.now().month
+    curr_year = datetime.now().year
+    with db_cursor as cs:
+        cs.execute("""
+            SELECT *
+            FROM mettest c 
+            WHERE MONTH(c.end) = %s 
+            AND YEAR(c.end) = %s 
+            AND c.country = %s
+            """, [curr_month, curr_year, country])
+        result = cs.fetchall()
+        daily = []
+        for element in result:
+            daily.append(element[2])
+                    
+        result = [models.Statistic(country, find_stat(daily))]
+        return result
+    
+def get_air_statistic_ozone(country):
+    curr_month = datetime.now().month
+    curr_year = datetime.now().year
+    with db_cursor as cs:
+        cs.execute("""
+            SELECT *
+            FROM ozonetest c 
+            WHERE MONTH(c.end) = %s 
+            AND YEAR(c.end) = %s 
+            AND c.country = %s
+            """, [curr_month, curr_year, country])
+        result = cs.fetchall()
+        daily = []
+        for element in result:
+            daily.append(element[2])
+            
+        result = [models.Statistic(country, find_stat(daily))]
+        return result
 
-# def get_basin_geom(basin_id):
-#     with db_cursor() as cs:
-#         cs.execute("""
-#             SELECT ST_AsText(geometry)
-#             FROM basin
-#             WHERE basin_id=%s
-#             """, [basin_id])
-#         result = cs.fetchone()
-#     if result:
-#         return result[0]
-#     else:
-#         abort(404)
+def get_emission(country):
+    with db_cursor as cs:
+        cs.execute("""
+            SELECT c.country, c.carbonIntensity
+            FROM carbonIntensitytest c
+            WHERE c.country = %s       
+            """, [country])
+        result = cs.fetchone()
+    if result:
+        country, inten = result
+        return models.Emission(*result)
+    else:
+        abort(404)
 
-# def get_stations_in_basin(basin_id):
-#     with db_cursor() as cs:
-#         cs.execute("""
-#             SELECT station_id, basin_id, ename, lat, lon
-#             FROM station WHERE basin_id=%s
-#             """, [basin_id])
-#         result = [models.Station(*row) for row in cs.fetchall()]
-#         return result
-
-# def get_station_details(station_id):
-#     with db_cursor() as cs:
-#         cs.execute("""
-#             SELECT station_id, basin_id, ename, lat, lon 
-#             FROM station 
-#             WHERE station_id=%s
-#             """, [station_id])
-#         result = cs.fetchone()
-#     if result:
-#         return models.Station(*result)
-#     else:
-#         abort(404)
-
-# def get_basin_annual_rainfall(basin_id, year):
-#     with db_cursor() as cs:
-#         cs.execute("""
-#             SELECT SUM(daily_avg)
-#             FROM (
-#                 SELECT r.year, r.month, r.day, AVG(r.amount) as daily_avg
-#                 FROM rainfall r
-#                 INNER JOIN station s ON r.station_id=s.station_id
-#                 INNER JOIN basin b ON b.basin_id=s.basin_id
-#                 WHERE b.basin_id=%s AND r.year=%s
-#                 GROUP BY r.year, r.month, r.day
-#             ) daily_avg
-#         """, [basin_id, year])
-#         result = cs.fetchone()
-#     if result and result[0]:
-#         amount = round(result[0], 2)
-#         return amount
-#     else:
-#         abort(404)
-
-# def get_basin_monthly_average(basin_id):
-#     with db_cursor() as cs:
-#         cs.execute("""
-#             SELECT month, AVG(monthly_amount)
-#             FROM (
-#                 SELECT SUM(r.amount) as monthly_amount, month
-#                 FROM rainfall r
-#                 INNER JOIN station s ON r.station_id = s.station_id
-#                 INNER JOIN basin b ON s.basin_id = b.basin_id
-#                 WHERE b.basin_id=%s
-#                 GROUP BY r.station_id, month, year
-#             ) monthly
-#             GROUP BY month
-#             """, [basin_id])
-#         months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-#                   'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
-#         result = [
-#                 models.MonthlyAverage(months[month-1], month, round(amount, 2))
-#                 for month, amount in cs.fetchall()
-#             ]
-#         return result
+def get_emission_per_person(country):
+    with db_cursor as cs:
+        cs.execute("""
+            SELECT c.code, p.population, ci.carbonIntensity
+            FROM code c
+            INNER JOIN population p
+            ON c.country = p.country
+            INNER JOIN carbonIntensitytest ci
+            ON ci.country = c.code
+            WHERE c.code = %s     
+            """, [country])
+        result = cs.fetchone()
+    if result:
+        code, pop, carin = result
+        per = carin/pop
+        return models.Emission(code, per)
+    else:
+        abort(404)
+    
+def get_correlation_carbon(country):
+    curr_month = datetime.now().month
+    curr_year = datetime.now().year
+    with db_cursor as cs:
+        cs.execute("""
+            SELECT c.code, p.population, ct.carbon_avg
+            FROM code c
+            INNER JOIN population p
+            ON c.country = p.country
+            INNER JOIN carbontest ct
+            ON ct.country = c.code
+            WHERE MONTH(ct.end) = %s 
+            AND YEAR(ct.end) = %s 
+            WHERE c.code = %s
+            """, [curr_month, curr_year, country])
+        result = cs.fetchall()
+        pop = result[-1][1]
+        daily = []
+        for element in result:
+            daily.append(element[2])
+        car = sum(daily)
+        corr = statistics.correlation(pop, car)    
+        result = [models.Correlation(country, corr)]
+        return result
